<?xml version="1.0"?>
<package format="2">
  <name>em7180_imu</name>
  <version>0.1.0</version>
  <description>The em7180 package</description>

  <maintainer email="matt@rosagriculture.org">ROS Agriculture</maintainer>
  <author email="matt@droter.com">Matt Droter</author>
  <author email="post@vortexntnu.no">Vortex</author>
  <license>Unlicense</license>
  <url type="website">http://wiki.ros.org/em7180_imu</url>
  <url type="repository">https://github.com/ros-agriculture/em7180_imu</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
